Better marker pointing on the map fix matching children to parent issue, add locate child feature

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -160,3 +160,9 @@ tbody td {
 .neon-blue {
   background-color: var(--neon-blue);
 }
+
+.child-list {
+  border: none;
+  text-align: left;
+  font-weight: bold;
+}
