--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* @media (min-width: 1000px) {
+  .bottom-sheet-modal {
+    display: block;
+  }
+} */
